fix spacing

--- a/public/styles.css
+++ b/public/styles.css
@@ -248,6 +248,7 @@ main h1 {
 
     #game h2 {
         font-size: 18px;
+        margin-top: 12px;
         margin-bottom: 12px;
     }
     .input-container{
